# CppMicroserviceExampleGenerator

./: CMakeLists.txt  README.md
include/: optionparser.h
src/: CMakeLists.txt  CppMsGenerator.cpp  CppMsGenerator.h
template/: CMakeLists.txt  project.vcxproj.user.in
template/service_consumer_dir/: CMakeLists.txt  consumer.cpp
template/service_implementation_dir/: CMakeLists.txt  implementation.cpp  implementation_manifest.json
template/service_interface_dir/: CMakeLists.txt  service.cpp  service.h
template_/: CMakeLists.txt  main.cpp
template_/service_consumer_dir/: consumer.cpp  consumer_manifest.json
